--- a/.github/workflows/create-pr.yml
+++ b/.github/workflows/create-pr.yml
@@ -12,16 +12,23 @@ jobs:
   create_pr:
     runs-on: ubuntu-latest
     steps:
+      - uses: tibdex/github-app-token@v1.8
+        id: generate-gtihub-token
+        with:
+          app_id: ${{ vars.GITHUB_APP_ID }}
+          private_key: ${{ secrets.GITHUB_APP_PRIVATE_KEY }}
       - uses: actions/checkout@v4
         with:
           ref: main
-      - uses: actions/setup-node@v3
-        with:
-          cache: "npm"
-      - run: npm install
+      # - uses: actions/setup-node@v3
+      #   with:
+      #     cache: "npm"
+      # - run: npm install
+      - run: touch test.txt
       - uses: peter-evans/create-pull-request@v5
         with:
           commit-message: Update xxxx file
           delete-branch: true
+          token: ${{ steps.generate-gtihub-token.outputs.token }}
           title: Update xxxx file
           reviewers: kazuma0129
