--- a/.github/workflows/create-pr.yml
+++ b/.github/workflows/create-pr.yml
@@ -15,8 +15,8 @@ jobs:
       - uses: tibdex/github-app-token@v1.8
         id: generate-gtihub-token
         with:
-          app_id: ${{ vars.GITHUB_APP_ID }}
-          private_key: ${{ secrets.GITHUB_APP_PRIVATE_KEY }}
+          app_id: ${{ vars.APP_ID }}
+          private_key: ${{ secrets.APP_PRIVATE_KEY }}
       - uses: actions/checkout@v4
         with:
           ref: main
