--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "react": "18.0.0"
+    "react": "18.0.0",
+    "react/canary": "npm:react@18.3.0-canary-1219d57fc-20240201",
+    "react/next": "npm:react@18.3.0-canary-1219d57fc-20240201"
   }
 }
