--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "react": "18.2.0",
-    "react/canary": "npm:react@18.3.0-canary-247738465-20240130",
-    "react/next": "npm:react@18.3.0-canary-247738465-20240130"
+    "react/canary": "npm:react@18.3.0-canary-1219d57fc-20240201",
+    "react/next": "npm:react@"
   }
 }
